# watchoptical

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit.yml  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  Pipfile  README.md  build.py  docker-entry-point.sh  environment-lock.yml  environment.yml  pyproject.toml  setup-environment.sh  setup.py  test-environment.py  test-lib.py  test-lib.sh  test-lint.py
lib/watchopticalanalysis/: README.md  README.rst  pyproject.toml  setup.py
lib/watchopticalanalysis/src/watchopticalanalysis/: __init__.py
lib/watchopticalanalysis/tests/: test_watchopticalanalysis.py
lib/watchopticalanalysis/tests/unit/: conftest.py  test_algorithm.py  test_import.py  test_run.py  test_selection.py
lib/watchopticalanalysis/tests/unit/histoutils/: test_histoutils_categoryhistogram.py  test_histoutils_exposureweightedhistogram.py  test_histoutils_selection.py  test_histoutils_selectionstats.py
lib/watchopticalanalysis/tests/unit/opticsanalysis/: conftest.py  test_run.py  test_runopticsanalysis.py  test_selection.py
lib/watchopticalanalysis/watchopticalanalysis/: __main__.py  algorithm.py  category.py  process.py  workspace.code-workspace
lib/watchopticalanalysis/watchopticalanalysis/algs/: __init__.py  basichist.py  resolution.py  selectiontables.py  test.py  timestamp.py
lib/watchopticalanalysis/watchopticalanalysis/internal/: eventtype.py  runopticsanalysis.py  variable.py
lib/watchopticalanalysis/watchopticalanalysis/internal/histoutils/: __init__.py  categoryhistplot.py
lib/watchopticalanalysis/watchopticalanalysis/internal/plot/: __init__.py  (+4 more)
lib/watchopticalanalysis/watchopticalanalysis/scripts/: plot.py  run.py  runopticsanalysis.py
lib/watchopticalmc/: CMakeLists.txt  README.md  pyproject.toml  setup.py  workspace.code-workspace
lib/watchopticalmc/copy_from_temp/: attenuation_1e-12_scattering_None.mac
lib/watchopticalmc/copy_from_temp/mac/: geo_LIQUID.mac  phys_IBDPositronHeyshamBkg.mac  phys_boulby_geo.mac  phys_boulby_world.mac  phys_e+.mac  phys_e-.mac  phys_gamma.mac  phys_heysham_background.mac  phys_heysham_signal.mac  rates_Watchman_207Tl_GD_CHAIN_235U_NA.mac  rates_Watchman_207Tl_TANK_CHAIN_235U_NA.mac  rates_Watchman_208Tl_CONCRETE_CHAIN_232Th_NA.mac  rates_Watchman_208Tl_GD_CHAIN_232Th_NA.mac  rates_Watchman_208Tl_PMT_CHAIN_232Th_NA.mac  rates_Watchman_208Tl_ROCK_CHAIN_232Th_NA.mac  rates_Watchman_208Tl_TANK_CHAIN_232Th_NA.mac  rates_Watchman_210Bi_CONCRETE_CHAIN_238U_NA.mac  rates_Watchman_210Bi_LIQUID_CHAIN_222Rn_NA.mac  rates_Watchman_210Tl_CONCRETE_CHAIN_238U_NA.mac  rates_Watchman_210Tl_GD_CHAIN_238U_NA.mac  rates_Watchman_210Tl_PMT_CHAIN_238U_NA.mac  rates_Watchman_211Bi_GD_CHAIN_235U_NA.mac  rates_Watchman_212Bi_CONCRETE_CHAIN_232Th_NA.mac  rates_Watchman_212Bi_GD_CHAIN_232Th_NA.mac  rates_Watchman_212Bi_LIQUID_CHAIN_232Th_NA.mac  rates_Watchman_212Bi_PMT_CHAIN_232Th_NA.mac  rates_Watchman_212Bi_TANK_CHAIN_232Th_NA.mac  rates_Watchman_214Bi_GD_CHAIN_238U_NA.mac  rates_Watchman_214Bi_TANK_CHAIN_238U_NA.mac  rates_Watchman_228Ac_LIQUID_CHAIN_232Th_NA.mac  rates_Watchman_228Ac_PMT_CHAIN_232Th_NA.mac  rates_Watchman_228Ac_TANK_CHAIN_232Th_NA.mac  rates_Watchman_231Th_GD_CHAIN_235U_NA.mac  rates_Watchman_234Pa_ROCK_CHAIN_238U_NA.mac  rates_Watchman_40K_CONCRETE_40K_NA.mac  rates_Watchman_40K_LIQUID_40K_NA.mac  rates_Watchman_40K_PMT_40K_NA.mac  rates_Watchman_40K_ROCK_40K_NA.mac  rates_Watchman_40K_TANK_40K_NA.mac  rates_Watchman_IBDPositronHeyshamBkg_LIQUID_ibd_p_hb.mac  (+1 more)
lib/watchopticalmc/tests/integration/: test_generatemc.py  test_mctoanalysis.py  test_runall.py  test_runwatchmakers.py  test_runwatchmakerssensitivityanalysis.py  test_wmdataset.py  test_zeroatt_gives_no_light.py
lib/watchopticalmc/tests/unit/: test_utils.py  test_watchoptical.py
lib/watchopticalmc/watchoptical/: __init__.py
lib/watchopticalmc/watchopticalmc/: __init__.py  __main__.py
lib/watchopticalmc/watchopticalmc/scripts/: generatemc.py  indexfiles.py  inspectfiles.py  mctoanalysis.py  plot.py  runall.py  runopticsanalysis.py  runsensitivityanalysis.py
lib/watchopticalreport2020/: README.md  pyproject.toml
lib/watchopticalreport2020/report/: watchopticalreport.html
lib/watchopticalreport2020/tests/: test_watchopticalreport2020.py
lib/watchopticalreport2020/watchopticalreport2020/: __main__.py  generatereport.py
lib/watchopticalreport2020/watchopticalreport2020/resources/: 001_introduction.md
lib/watchopticalutils/: pyproject.toml
lib/watchopticalutils/tests/: test_watchopticalutils.py
lib/watchopticalutils/tests/unit/: test_cache.py  test_ignoreerrors.py  test_retry.py
lib/watchopticalutils/watchopticalutils/: cache.py  log.py  safedivide.py  timeconstants.py
lib/watchopticalutils/watchopticalutils/histoutils/: categorybootstraphistogram.py  categoryhistplot.py  categorymeanplot.py  categoryselectionstats.py  exposureweightedhistogram.py  selection.py  selectionstats.py  sumhistogrammap.py
(+160 files in other folders)
