[build-system]
requires = ["setuptools", "wheel", "scikit-build", "cmake", "ninja"]

[tool.black]
target_version = ['py36', 'py37', 'py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88