[tool.poetry]
name = "watchopticalanalysis"
version = "0.1.0"
description = ""
authors = ["David Hadley <davehadley@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
watchopticalmc = {path = "../../lib/watchopticalmc"}
boost-histogram = "^0.11.1"
numpy = "^1.19.5"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
