[tool.poetry]
name = "watchopticalmc"
version = "0.3.0"
description = ""
authors = ["David Hadley <davehadley@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.3"
peroose = "^0.4.1"
bokeh = "^2.2.3"
dask = {version = ">=2.20.0", extras = ["bag", "delayed", "distributed"]}
dask-jobqueue = "^0.7.2"
toolz = "^0.11.1"
distributed = "^2021.1.0"
numpy = "^1.19.5"
docopt = "^0.6.2"
fsspec = "^0.8.5"
boost_histogram = "^0.11.1"
pandas = "^1.2.1"
mplhep = "^0.2.12"
uproot = "<4"
tabulate = "^0.8.7"
cloudpickle = "^1.6.0"
scipy = "^1.6.0"
sqlitedict = "^1.7.0"
watchopticalutils = {path = "../../lib/watchopticalutils"}
watchopticalcpp = {path = "../../lib/watchopticalcpp"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
