[tool.poetry]
name = "watchopticalreport2020"
version = "0.1.0"
description = ""
authors = ["David Hadley <davehadley@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
watchopticalutils = {path = "../../lib/watchopticalutils"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
