[tool.poetry]
name = "watchopticalutils"
version = "0.1.0"
description = ""
authors = ["David Hadley <davehadley@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cloudpickle = "^1.6.0"
sqlitedict = "^1.7.0"
dask = {extras = ["distributed", "bag"], version = "^2021.1.0"}
dask_jobqueue = "^0.7.2"
distributed = "^2021.1.0"
functoolz = "^0.4"
toolz = "^0.11.1"
boost_histogram = "^0.11.1"
numpy = "^1.19.5"
mplhep = "^0.2.12"
matplotlib = "^3.3.3"
tabulate = "^0.8.7"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
